--- a/EatTogether/Base.lproj/Main.storyboard
+++ b/EatTogether/Base.lproj/Main.storyboard
@@ -646,16 +646,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1tk-Z8-A8A">
-                                <rect key="frame" x="0.0" y="0.0" width="584" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="594" height="600"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gaM-N8-qs4">
-                                        <rect key="frame" x="0.0" y="0.0" width="584" height="600"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="594" height="600"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6id-pw-huG">
-                                                <rect key="frame" x="20" y="126.5" width="544" height="250"/>
+                                                <rect key="frame" x="20" y="126.5" width="554" height="250"/>
                                                 <subviews>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Npf-xG-Bt5">
-                                                        <rect key="frame" x="30" y="20" width="484" height="40"/>
+                                                        <rect key="frame" x="30" y="20" width="504" height="40"/>
                                                         <color key="tintColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="LW7-xI-rrF"/>
@@ -665,21 +665,21 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="1ch-GG-hIF">
-                                                        <rect key="frame" x="30" y="80" width="484" height="40"/>
+                                                        <rect key="frame" x="30" y="80" width="504" height="40"/>
                                                         <color key="tintColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="uCX-2a-gGK">
-                                                        <rect key="frame" x="30" y="140" width="484" height="40"/>
+                                                        <rect key="frame" x="30" y="140" width="504" height="40"/>
                                                         <color key="tintColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                     </textField>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="re entered password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0sb-Gk-y2u">
-                                                        <rect key="frame" x="30" y="200" width="484" height="40"/>
+                                                        <rect key="frame" x="30" y="200" width="504" height="40"/>
                                                         <color key="tintColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -697,7 +697,7 @@
                                                     <constraint firstItem="uCX-2a-gGK" firstAttribute="top" secondItem="1ch-GG-hIF" secondAttribute="bottom" constant="20" id="VAr-C6-8zz"/>
                                                     <constraint firstItem="0sb-Gk-y2u" firstAttribute="top" secondItem="uCX-2a-gGK" secondAttribute="bottom" constant="20" id="VVx-V4-Zn5"/>
                                                     <constraint firstItem="1ch-GG-hIF" firstAttribute="top" secondItem="Npf-xG-Bt5" secondAttribute="bottom" constant="20" id="abh-zN-Dmf"/>
-                                                    <constraint firstAttribute="trailing" secondItem="Npf-xG-Bt5" secondAttribute="trailing" constant="30" id="agC-Km-FQu"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Npf-xG-Bt5" secondAttribute="trailing" constant="20" id="agC-Km-FQu"/>
                                                     <constraint firstItem="Npf-xG-Bt5" firstAttribute="width" secondItem="1ch-GG-hIF" secondAttribute="width" id="d45-Y3-BCc"/>
                                                     <constraint firstItem="0sb-Gk-y2u" firstAttribute="height" secondItem="uCX-2a-gGK" secondAttribute="height" id="lxz-yq-QKf"/>
                                                     <constraint firstItem="Npf-xG-Bt5" firstAttribute="top" secondItem="6id-pw-huG" secondAttribute="top" constant="20" id="nOk-8q-vQu"/>
@@ -706,17 +706,17 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIGN UP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbG-gq-ctI">
-                                                <rect key="frame" x="246" y="60" width="93.5" height="27.5"/>
+                                                <rect key="frame" x="251" y="60" width="93.5" height="27.5"/>
                                                 <color key="tintColor" red="0.7803921568627451" green="0.24705882352941178" blue="0.015686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                                 <color key="textColor" red="0.82745098039215681" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RXQ-bm-yop">
-                                                <rect key="frame" x="50" y="396.5" width="484" height="60"/>
+                                                <rect key="frame" x="50" y="396.5" width="504" height="60"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AsL-Gu-mfT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="484" height="60"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="504" height="60"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                         <state key="normal" title="Register">
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -741,7 +741,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fem-X3-IRT">
-                                                <rect key="frame" x="277" y="107.5" width="30" height="24"/>
+                                                <rect key="frame" x="282" y="107.5" width="30" height="24"/>
                                                 <state key="normal" image="camera.png">
                                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -775,13 +775,19 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="gaM-N8-qs4" secondAttribute="trailing" id="2pA-pc-1ru"/>
                                     <constraint firstAttribute="bottom" secondItem="gaM-N8-qs4" secondAttribute="bottom" id="7qZ-8e-CSP"/>
                                     <constraint firstItem="gaM-N8-qs4" firstAttribute="top" secondItem="1tk-Z8-A8A" secondAttribute="top" id="8xV-Vq-K0t"/>
+                                    <constraint firstAttribute="trailing" secondItem="gaM-N8-qs4" secondAttribute="trailing" id="G6I-kP-b5n"/>
                                     <constraint firstAttribute="width" secondItem="gaM-N8-qs4" secondAttribute="width" id="fem-VG-dZS"/>
+                                    <constraint firstAttribute="width" constant="600" id="jJM-LH-jjd"/>
                                     <constraint firstAttribute="height" secondItem="gaM-N8-qs4" secondAttribute="height" id="tJz-W5-4j6"/>
                                     <constraint firstItem="gaM-N8-qs4" firstAttribute="leading" secondItem="1tk-Z8-A8A" secondAttribute="leading" id="ttW-mn-0bb"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="jJM-LH-jjd"/>
+                                    </mask>
+                                </variation>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -789,7 +795,7 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="1tk-Z8-A8A" firstAttribute="top" secondItem="NkH-7Q-ziL" secondAttribute="top" id="29K-sF-VSy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="1tk-Z8-A8A" secondAttribute="trailing" id="9Gl-T1-vTc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1tk-Z8-A8A" secondAttribute="trailing" constant="-10" id="9Gl-T1-vTc"/>
                             <constraint firstItem="1tk-Z8-A8A" firstAttribute="leading" secondItem="NkH-7Q-ziL" secondAttribute="leading" id="phH-JR-rVW"/>
                             <constraint firstItem="aH8-E8-yNv" firstAttribute="top" secondItem="1tk-Z8-A8A" secondAttribute="bottom" id="w78-HU-b6B"/>
                         </constraints>
